modified english resource file.

--- a/src/main/webapp/WEB-INF/i18n/messages_en.properties
+++ b/src/main/webapp/WEB-INF/i18n/messages_en.properties
@@ -1,36 +1,36 @@
 #Created by JInto - www.guh-software.de
-#Tue Jun 04 20:43:15 EDT 2013
+#Thu Jun 20 09:35:09 EDT 2013
 \ =EMPTY
-ALL_MY_TEAM_CAN_SEE=visible to my friends
+ALL_MY_TEAM_CAN_SEE=Visible Only To My Friends
 AddOnName=STGO
-AddOnNotice=Drag the quick tool to bookmarks bar\:
+AddOnNotice=Drag Quick Tool to Bookmarks Bar\:
 Big\ Tag=Category
 Circle=Circle
-Content=Content
+Content=Contents
 Customize=Customize
-NotesAndPrays=Notes and Prays from {0}
+NotesAndPrays=Notes and Prayers from {0}
 NotesAndPraysOfFriend=Notes and Prays From {0}'s Family and Friends
-ONLY_FOR_RECEIVER=visible only to the receiver
-ONLY_FOR_SELECTED_PERSON=visible to selected person
-ONLY_MYSELF_CAN_SEE=visible for myself
+ONLY_FOR_RECEIVER=Visible Only To Receiver
+ONLY_FOR_SELECTED_PERSON=Visible Only To Selected User
+ONLY_MYSELF_CAN_SEE=Visible Only For Myself
 Remark=Remark
-SHOW_TO_EVERY_ONE=visible to everyone.
-Twitter=Twitter
+SHOW_TO_EVERY_ONE=Visible For Everyone
+Twitter=Quick Thought
 User\ Account=User Account
 admin_suggested_tag1=Useful Websites
 admin_suggested_tag2=Good Recipes
-admin_suggested_tag3=Photos for Show
-admin_suggested_tag4=Info for Project Team
+admin_suggested_tag3=Photos
+admin_suggested_tag4=Info For Team Members
 admin_suggested_tag5=Pray
 admin_suggested_tag6=Diary
-admin_suggested_tag7=Think
+admin_suggested_tag7=Thoughts
 admin_suggested_tag8=Experience
-agree=I Agree, Start Signup\!
+agree=I Agree. Start Sign Up\!
 allcontents=All Contents
 button_cancel=Cancel
 button_end=End
 button_find=Find
-button_gotohome=go visit {0}'s space
+button_gotohome=Go Visit {0}'s Space
 button_home=Home
 button_myhome=Home Page of {0}
 button_proceed=Proceed
@@ -40,15 +40,15 @@ button_showcookie=Show Cookie
 button_showmessage=Show Message
 button_showstacktrace=Show Stack Trace
 button_signup=Sign Up
-button_submit=Submit
+button_submit=Login
 button_update=Update
-contributeContent=I just got something\!
-contributeTwitter=I'm gonna write somthing\!
-default_welcome_message=Welcome\uFF0Cshould you have any question, please go to Tao's space and leave message.
+contributeContent=News, Resource, Image, Bookmarks
+contributeTwitter=Write Something \:D
+default_welcome_message=Welcome\! If you have any question, please leave a message to Tao.
 doublespace=\  
 entity_create=Create new {0}
 entity_delete=Delete {0}
-entity_delete_confirm=Are you sure want to delete this item?
+entity_delete_confirm=Are you sure to delete this item?
 entity_dependency_required=The following dependencies need to be created first\:
 entity_find=Find {0}
 entity_list_all=List all {0}
@@ -60,10 +60,10 @@ entity_tag_create=Create a New Tag\!
 entity_update=Update {0}
 error_dataaccessfailure_problemdescription=The back end database is doing back up, please try it later.
 error_dataaccessfailure_title=Database Maintaining
-error_resourcenotfound_problemdescription=The webpage you are visiting is not initialized yet. please try agian, or register it now\!
+error_resourcenotfound_problemdescription=This webpage was not yet set up, please try again, or register this \:D 
 error_resourcenotfound_title=Resource Not Initialized Yet
-error_uncaughtexception_problemdescription=The webpage you are visiting is empty, please try agian, or register it now\!
-error_uncaughtexception_title=Empty Web Page
+error_uncaughtexception_problemdescription=This webpage was not yet set up, please try again, or register this \:D 
+error_uncaughtexception_title=Empty WebPage
 exception_cookie=Cookies
 exception_details=Details
 exception_message=Exception Message
@@ -80,20 +80,20 @@ global_language_chinese=\u4E2D\u6587\u793E\u533A
 global_language_english=English Community
 global_language_french=Communaut\u00E9 fran\u00E7aise
 global_language_switch=Switch language to {0}
-global_login_notice=Please click here to log in and add comments\!  
-global_menu_accountsManage=Manage my account
-global_menu_contentsManage=Manage my contents
-global_menu_diaryManage=Manage my notes
+global_login_notice=Please click here to login and add comments\!  
+global_menu_accountsManage=Manage Account Info
+global_menu_contentsManage=Manage Contents
+global_menu_diaryManage=Manage Notes
 global_menu_find=Find by {0}
-global_menu_inboxManage=Manage my messages
+global_menu_inboxManage=Manage Messages
 global_menu_list=List all {0}
 global_menu_new=Create new {0}
-global_menu_newbookmark=Found some thing good? Why not click and share with friends right away\! 
-global_menu_newmessage=Leave a message to the owner? Good idea\! While please set it as private if you don't want other to see.
-global_menu_newnote=Make a pray? Write diary? Some experience or thought? it's time to write them down.
+global_menu_newbookmark=Found some thing good? Why not share with friends right away\! 
+global_menu_newmessage=Message to owner? Good idea\! If you don't want others to see, please set as private.
+global_menu_newnote=Say a prayer? Write diary? Record an experience or thought? it's time to share them down.
 global_menu_readmore=>>>
-global_menu_resetView=Display all tags in a default order
-global_menu_tagsManage=Manage my tags
+global_menu_resetView=Display Tags In Default Order
+global_menu_tagsManage=Manage Tags
 global_sponsored=Sponsored by SpringSource
 global_theme=Theme
 global_theme_alt=alt
@@ -104,23 +104,23 @@ list_next=Next Page
 list_page=Page {0} of {1}
 list_previous=Previous Page
 list_size=List results per page\:
-public=public
-publicDescription=Present Filtered News For Special Person, Manage Persional Bookmarks On Cloud, Share Useful Stuff with Team and Friends, And More... 
-security_create_unsuccessful=Sorry, this user name is already regestered, please try an other one.
+public=Public
+publicDescription=Read, Share and Follow \! Online community to find the"Good Ones" \!
+security_create_unsuccessful=Sorry, this name has been regestered, please try an other one.
 security_login=Login
 security_login_form_name=Name
 security_login_form_name_message=Enter your name
 security_login_form_password=Password
-security_login_form_password_message=Enter your password (no less then 4 characters please)
-security_login_message=Have no account yet?  Click the 'I agree' in right side and Sign up right now\! it takes only 10 seconds.
-security_login_title=Registered User Login Here
-security_login_title2=New User Go Here
-security_login_unsuccessful=Your login attempt was not successful, try again. Reason\: 
-security_login_userlicence=User Licence
+security_login_form_password_message=Enter your password (Minimum 4 characters)
+security_login_message=No account ?  Click  'I agree' on the right and Sign up now\!
+security_login_title=User Login Here
+security_login_title2=New User Come Here
+security_login_unsuccessful=Your Login Was Not Successful. Please Try Again. Reason\: 
+security_login_userlicence=User Agreement
 security_logout=Logout
 security_signup_message=This is for new user, the following is our aggreement \:\n 1. you password and infomation is not safe here, and not safe anywhere in the internet. /n2. we might have to give up protecting your right when we are muscled by the government ,  3.You have to protect youself if you edited anything which will cause anyone unhappy.  if you agree all of them, please click the agree buton at the end, then in the coming page, select an unused username, set up your password and contact email, then go \:-)
 selenium_menu_test_suite=Test Suite
-webflow_endstate_message=You have now reached the end of this flow.
+webflow_endstate_message=End of Messages
 webflow_endstate_title=Spring Web Flow - End State
 webflow_menu_enter=Enter {0} flow
 webflow_state1_message=This is a simple example to get started with Spring Web Flow. The buttons below lead you to another view state (Proceed) or to an end state.
