--- a/src/main/webapp/WEB-INF/i18n/messages.properties
+++ b/src/main/webapp/WEB-INF/i18n/messages.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Sun Jun 09 21:03:19 EDT 2013
+#Sat Jun 22 09:50:00 EDT 2013
 \ =\u7A7A
 ALL_MY_TEAM_CAN_SEE=\u5728\u670B\u53CB\u5708\u5185\u53EF\u89C1
 AddOnName=STGO
@@ -114,11 +114,17 @@ security_login_form_password=\u5BC6\u7801
 security_login_form_password_message=\u8BF7\u5728\u6B64\u8BBE\u7F6E\u4E00\u4E2A\u4E0D\u5C11\u4E8E4\u4F4D\u7684\u5BC6\u7801
 security_login_message=\u6CA1\u6709\u7528\u6237\u540D\u548C\u5BC6\u7801\uFF1F\u5FEB\u731B\u51FB\u53F3\u8FB9\u7684\u7A97\u53E3\u7684 [\u4E25\u91CD\u540C\u610F] \u94FE\u63A5\u95EA\u7535\u6CE8\u518C\u5427\uFF01
 security_login_title=\u5DF2\u6CE8\u518C\u7528\u6237\u8BF7\u5728\u6B64\u767B\u5F55
-security_login_title2=\u65B0\u7528\u6237\u8BF7\u770B\u8FC7\u6765
 security_login_unsuccessful=\u4F60\u7684\u767B\u5F55\u8FC7\u7A0B\u672A\u80FD\u6210\u529F, \u8BF7\u67E5\u770B\u539F\u56E0\u540E\u518D\u6B21\u5C1D\u8BD5\u3002\u539F\u56E0\uFF1A 
-security_login_userlicence=\u7528\u6237\u534F\u8BAE
+security_login_userlicence=\u4E3A\u4EC0\u4E48\u8981\u6CE8\u518C
 security_logout=\u9000\u51FA\u767B\u5F55\u72B6\u6001
-security_signup_message=This is for new user, the following is our aggreement \:\n 1. you password and infomation is not safe here, and not safe anywhere in the internet. /n2. we might have to give up protecting your right when we are muscled by the government ,  3.You have to protect youself if you edited anything which will cause anyone unhappy.  if you agree all of them, please click the agree buton at the end, then in the coming page, select an unused username, set up your password and contact email, then go \:-)
+security_signup_message=\u6CE8\u518C\u540E\u6709\u4EC0\u4E48\u597D\u5904?
+security_signup_reason_0=\u6CE8\u518C\u4EE5\u540E\:  
+security_signup_reason_1=1. \u60A8\u5C06\u62E5\u6709\u4E2A\u4EBA\u7684\u7A7A\u95F4http\://ShareTheGoodOnes.com/\u60A8\u6CE8\u518C\u7684\u7528\u6237\u540D
+security_signup_reason_2=2. \u60A8\u53EF\u4EE5\u628A\u60A8\u7684\u4E66\u7B7E\u4FDD\u5B58\u5230\u7F51\u4E0A,\u5E76\u968F\u65F6\u968F\u5730\u4E0E\u60A8\u7684\u5BB6\u4EBA\u670B\u53CB\u4EEC\u5171\u4EAB\u3002
+security_signup_reason_3=3. \u60A8\u8FD8\u80FD\u5199\u65E5\u8BB0, \u968F\u7B14\u6216\u4EFB\u4F55\u5185\u5BB9,\u53EF\u4EE5\u901A\u8FC7\u5BF9\u522B\u4EBA\u5199\u7684\u5185\u5BB9\u6DFB\u52A0\u8BC4\u8BBA\uFF0C\u6216\u901A\u8FC7\u7559\u8A00\u6765\u52A0\u5F3A\u6C9F\u901A\u4EA4\u6D41\u3002
+security_signup_reason_4=4.\u60A8\u53EF\u4EE5\u5BF9\u60A8\u611F\u5174\u8DA3\u7684\u4EBA\u52A0\u5173\u6CE8\uFF08\u53EA\u8981\u5728\u4ED6\u7684\u540D\u5B57\u4E0A\u70B9\u51FB\uFF0C\u7136\u540E\u70B9\uFF0B\u53F7\u5373\u53EF\uFF09\uFF0C\u4E4B\u540E\u6BCF\u5F53\u4ED6\u6DFB\u52A0\u7684\u4E66\u7B7E\u6216\u7B14\u8BB0\uFF0C\u60A8\u7684\u7A7A\u95F4\u4E2D\u5C31\u80FD\u53CA\u65F6\u770B\u5230\u3002
+security_signup_reason_5=5. \u5BF9\u4E8E\u4E0D\u5E0C\u671B\u522B\u4EBA\u770B\u5230\u7684\u4E66\u7B7E\u6216\u7B14\u8BB0\uFF0C\u522B\u5FD8\u4E86\u4FDD\u5B58\u524D\u628A\u5B83\u8BBE\u6210\u201C\u53EA\u5BF9\u81EA\u5DF1\u53EF\u89C1\u201D\u3002
+security_signup_reason_last=\u8BA9\u6211\u4EEC\u4E00\u8D77\u5171\u4EAB\u6536\u85CF\u7684\u597D\u4E1C\u897F\u5427 \:-)
 selenium_menu_test_suite=Test Suite
 webflow_endstate_message=\u8FD9\u5DF2\u7ECF\u662F\u6700\u540E\u4E86
 webflow_endstate_title=Spring Web Flow - End State
