--- a/src/main/webapp/WEB-INF/i18n/messages_en.properties
+++ b/src/main/webapp/WEB-INF/i18n/messages_en.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Thu Jun 20 09:35:09 EDT 2013
+#Sat Jun 22 09:50:00 EDT 2013
 \ =EMPTY
 ALL_MY_TEAM_CAN_SEE=Visible Only To My Friends
 AddOnName=STGO
@@ -114,11 +114,17 @@ security_login_form_password=Password
 security_login_form_password_message=Enter your password (Minimum 4 characters)
 security_login_message=No account ?  Click  'I agree' on the right and Sign up now\!
 security_login_title=User Login Here
-security_login_title2=New User Come Here
 security_login_unsuccessful=Your Login Was Not Successful. Please Try Again. Reason\: 
-security_login_userlicence=User Agreement
+security_login_userlicence=Why shall I sign up?
 security_logout=Logout
-security_signup_message=This is for new user, the following is our aggreement \:\n 1. you password and infomation is not safe here, and not safe anywhere in the internet. /n2. we might have to give up protecting your right when we are muscled by the government ,  3.You have to protect youself if you edited anything which will cause anyone unhappy.  if you agree all of them, please click the agree buton at the end, then in the coming page, select an unused username, set up your password and contact email, then go \:-)
+security_signup_message=Why it's good to sign up?
+security_signup_reason_0=By signing up \:  
+security_signup_reason_1=1. you'll get a person web site at http\://ShareTheGoodOnes.com/your regestered name
+security_signup_reason_2=2. you can save all your bookmarks onto the website, and share them with your family and friends any time, any where.
+security_signup_reason_3=3. you can also write diary, work log, pray or anything on the web site, you can remark the content wrote by you or others.
+security_signup_reason_4=4. you can listen to any one you interested by clicking his name, then click the + button, then the bookmarks he added and content he write will appear on your personal space.
+security_signup_reason_5=5. if you don't want you share your bookmark or the content yet, you can set it as "visible to only my self".
+security_signup_reason_last=Let's go \:-)
 selenium_menu_test_suite=Test Suite
 webflow_endstate_message=End of Messages
 webflow_endstate_title=Spring Web Flow - End State
