added a login form on top of index page.

--- a/src/main/webapp/WEB-INF/i18n/application_fr.properties
+++ b/src/main/webapp/WEB-INF/i18n/application_fr.properties
@@ -1,12 +1,17 @@
 #Created by JInto - www.guh-software.de
-#Thu May 02 16:20:30 EDT 2013
+#Sat Jun 22 11:35:00 EDT 2013
 application_name=Bigbang
 label_com_aeiou_bigbang_domain_bigtag=Big Tag
 label_com_aeiou_bigbang_domain_bigtag_authority=Authority
+label_com_aeiou_bigbang_domain_bigtag_commontagname=
+label_com_aeiou_bigbang_domain_bigtag_contenttitle=
+label_com_aeiou_bigbang_domain_bigtag_contenturl=
 label_com_aeiou_bigbang_domain_bigtag_id=Id
 label_com_aeiou_bigbang_domain_bigtag_owner=Type
 label_com_aeiou_bigbang_domain_bigtag_plural=Big Tags
 label_com_aeiou_bigbang_domain_bigtag_tagname=Tag Name
+label_com_aeiou_bigbang_domain_bigtag_twittercontent=
+label_com_aeiou_bigbang_domain_bigtag_twittertitle=
 label_com_aeiou_bigbang_domain_bigtag_type=Owner Name
 label_com_aeiou_bigbang_domain_bigtag_version=Version
 label_com_aeiou_bigbang_domain_circle=Circle
@@ -19,6 +24,7 @@ label_com_aeiou_bigbang_domain_circle_owner=Owner
 label_com_aeiou_bigbang_domain_circle_plural=Circles
 label_com_aeiou_bigbang_domain_circle_version=Version
 label_com_aeiou_bigbang_domain_content=Content
+label_com_aeiou_bigbang_domain_content_addingtagflag=
 label_com_aeiou_bigbang_domain_content_authority=Who Can See
 label_com_aeiou_bigbang_domain_content_commonbigtag=Public Space Tag *
 label_com_aeiou_bigbang_domain_content_conentcache=Can Copy The Content Here
@@ -59,6 +65,7 @@ label_com_aeiou_bigbang_domain_remark_remarttime=Remart Time
 label_com_aeiou_bigbang_domain_remark_replyto=Reply To
 label_com_aeiou_bigbang_domain_remark_version=Version
 label_com_aeiou_bigbang_domain_twitter=Twitter
+label_com_aeiou_bigbang_domain_twitter_addingtagflag=
 label_com_aeiou_bigbang_domain_twitter_authority=Authority
 label_com_aeiou_bigbang_domain_twitter_id=Id
 label_com_aeiou_bigbang_domain_twitter_lastupdate=Last Updated
