--- a/src/main/webapp/WEB-INF/i18n/messages.properties
+++ b/src/main/webapp/WEB-INF/i18n/messages.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Sat Jun 22 09:50:00 EDT 2013
+#Sat Jun 22 12:54:19 EDT 2013
 \ =\u7A7A
 ALL_MY_TEAM_CAN_SEE=\u5728\u670B\u53CB\u5708\u5185\u53EF\u89C1
 AddOnName=STGO
@@ -82,10 +82,10 @@ global_language_french=Communaut\u00E9 fran\u00E7aise
 global_language_switch=Switch language to {0}
 global_login_notice=\u8BF7\u70B9\u51FB\u8FD9\u91CC\u767B\u5F55\u5E76\u6DFB\u52A0\u8BC4\u8BBA\uFF01  
 global_menu_accountsManage=\u7BA1\u7406\u6211\u7684\u7528\u6237\u4FE1\u606F
-global_menu_contentsManage=\u7BA1\u7406\u6211\u53D1\u5E03\u7684\u5185\u5BB9
+global_menu_contentsManage=\u7BA1\u7406\u6211\u7684\u4E66\u7B7E
 global_menu_diaryManage=\u7BA1\u7406\u6211\u7684\u7B14\u8BB0
 global_menu_find=Find by {0}
-global_menu_inboxManage=\u7BA1\u7406\u6211\u6536\u5230\u7684\u7559\u8A00
+global_menu_inboxManage=\u67E5\u770B\u6211\u6536\u5230\u7684\u7559\u8A00
 global_menu_list=List all {0}
 global_menu_new=Create new {0}
 global_menu_newbookmark=\u770B\u5230\u6709\u8DA3\u7684\u4E1C\u897F\u4E86\uFF1F\u731B\u51FB\u8FD9\u91CC\u8DDF\u670B\u53CB\u5BB6\u4EBA\u5206\u4EAB\uFF01\u5171\u540C\u7684\u8BDD\u9898\u6C38\u8FDC\u662F\u5BB6\u4EBA\u670B\u53CB\u6240\u559C\u7231\u7684\u3002
@@ -93,7 +93,7 @@ global_menu_newmessage=\u7ED9\u7A7A\u95F4\u4E3B\u4EBA\u7559\u4E2A\u8A00\uFF1F\u6
 global_menu_newnote=\u60F3\u505A\u4E2A\u7948\u7977\uFF0C\u8BB0\u4E2A\u65E5\u5FD7\uFF0C\u8868\u8FBE\u60F3\u6CD5\uFF0C\u603B\u7ED3\u7ECF\u9A8C\uFF1F\u5199\u4E0B\u6765\uFF0C\u8BA9\u5BB6\u4EBA\u4E86\u89E3\uFF0C\u8BA9\u5C81\u6708\u89C1\u8BC1\uFF01
 global_menu_readmore=>>>
 global_menu_resetView=\u4EE5\u9ED8\u8BA4\u987A\u5E8F\u663E\u793A\u6240\u6709\u7684\u6807\u7B7E
-global_menu_tagsManage=\u7BA1\u7406\u6211\u7684\u6807\u7B7E
+global_menu_tagsManage=\u7BA1\u7406\u6211\u5B9A\u4E49\u7684\u5206\u7C7B
 global_sponsored=Sponsored by SpringSource
 global_theme=\u754C\u9762\u98CE\u683C
 global_theme_alt=alt
@@ -108,9 +108,9 @@ public=\u516C\u5171
 publicDescription=\u8DDF\u670B\u53CB\u5206\u4EAB\u6709\u8DA3\u65B0\u95FB\u3001\u5206\u7C7B\u7BA1\u7406\u4E66\u7B7E\u94FE\u63A5\u3001\u56E2\u961F\u534F\u4F5C\u3001\u5EFA\u7ACB\u80FD\u81EA\u52A8\u66F4\u65B0\u7684\u4E2A\u4EBA\u4E3B\u9875\uFF08\u7F51\u5740\u540E\u52A0\u6CE8\u518C\u7528\u6237\u540D\u5C31\u662F\u4E2A\u4EBA\u4E3B\u9875\uFF09\uFF0C\u5C31\u662F\u8FD9\u513F\u4E86\uFF01
 security_create_unsuccessful=\u8BE5\u7528\u6237\u540D\u5DF2\u7ECF\u88AB\u6CE8\u518C\uFF0C\u8BF7\u9009\u62E9\u65B0\u7684\u7528\u6237\u540D\uFF0C\u518D\u6B21\u5C1D\u8BD5\u3002
 security_login=\u7528\u6237\u767B\u5F55
-security_login_form_name=\u7528\u6237
+security_login_form_name=\u7528\u6237\: 
 security_login_form_name_message=\u8BF7\u5728\u6B64\u8F93\u5165\u7528\u6237\u540D
-security_login_form_password=\u5BC6\u7801
+security_login_form_password=\u5BC6\u7801\: 
 security_login_form_password_message=\u8BF7\u5728\u6B64\u8BBE\u7F6E\u4E00\u4E2A\u4E0D\u5C11\u4E8E4\u4F4D\u7684\u5BC6\u7801
 security_login_message=\u6CA1\u6709\u7528\u6237\u540D\u548C\u5BC6\u7801\uFF1F\u5FEB\u731B\u51FB\u53F3\u8FB9\u7684\u7A97\u53E3\u7684 [\u4E25\u91CD\u540C\u610F] \u94FE\u63A5\u95EA\u7535\u6CE8\u518C\u5427\uFF01
 security_login_title=\u5DF2\u6CE8\u518C\u7528\u6237\u8BF7\u5728\u6B64\u767B\u5F55
