--- a/src/main/webapp/WEB-INF/i18n/messages_en.properties
+++ b/src/main/webapp/WEB-INF/i18n/messages_en.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Sat Jun 22 09:50:00 EDT 2013
+#Sat Jun 22 10:44:59 EDT 2013
 \ =EMPTY
 ALL_MY_TEAM_CAN_SEE=Visible Only To My Friends
 AddOnName=STGO
@@ -85,7 +85,7 @@ global_menu_accountsManage=Manage Account Info
 global_menu_contentsManage=Manage Contents
 global_menu_diaryManage=Manage Notes
 global_menu_find=Find by {0}
-global_menu_inboxManage=Manage Messages
+global_menu_inboxManage=Check My Messages
 global_menu_list=List all {0}
 global_menu_new=Create new {0}
 global_menu_newbookmark=Found some thing good? Why not share with friends right away\! 
