--- a/src/main/webapp/WEB-INF/i18n/messages_fr.properties
+++ b/src/main/webapp/WEB-INF/i18n/messages_fr.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Sat Jun 22 09:50:00 EDT 2013
+#Sat Jun 22 10:44:59 EDT 2013
 \ =EMPTY
 ALL_MY_TEAM_CAN_SEE=visible to my friends
 AddOnName=STGO
@@ -85,7 +85,7 @@ global_menu_accountsManage=Manage my account
 global_menu_contentsManage=Manage my contents
 global_menu_diaryManage=Mange my notes
 global_menu_find=Find by {0}
-global_menu_inboxManage=Manage my messages
+global_menu_inboxManage=Check My Messages
 global_menu_list=List all {0}
 global_menu_new=Create new {0}
 global_menu_newbookmark=Found some thing good? Why not click and share with friends right away\!
