--- a/src/main/webapp/WEB-INF/i18n/application.properties
+++ b/src/main/webapp/WEB-INF/i18n/application.properties
@@ -1,5 +1,5 @@
-#Updated at Mon Jun 17 10:27:17 EDT 2013
-#Mon Jun 17 10:27:17 EDT 2013
+#Created by JInto - www.guh-software.de
+#Sat Jun 22 11:35:00 EDT 2013
 application_name=Bigbang
 label_com_aeiou_bigbang_domain_bigtag=Big Tag
 label_com_aeiou_bigbang_domain_bigtag_authority=\u8C01\u53EF\u4EE5\u770B\u89C1
@@ -103,7 +103,7 @@ label_public_expectedSalary=\u6708\u85AA\uFF1A{0}\u91D1\u5E01
 label_public_firesomeone=\u4E0D\u518D\u5173\u6CE8
 label_public_hiresomeone=\u6DFB\u52A0\u5230\u6211\u7684\u7A7A\u95F4
 label_public_index=\u6B22\u8FCE\u6765{0}\u7684\u7A7A\u95F4----{1}
-label_rememberme=\u8BB0\u4F4F\u7528\u6237\u540D\u548C\u5BC6\u7801
+label_rememberme=\u8BB0\u4F4F\u6211
 menu_category_bigtag_label=Big Tag
 menu_category_circle_label=Circle
 menu_category_content_label=Content
