--- a/src/main/webapp/WEB-INF/i18n/application_en.properties
+++ b/src/main/webapp/WEB-INF/i18n/application_en.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Sat Jun 22 11:35:00 EDT 2013
+#Fri Jun 28 14:15:14 EDT 2013
 application_name=Bigbang
 label_com_aeiou_bigbang_domain_bigtag=Big Tag
 label_com_aeiou_bigbang_domain_bigtag_authority=Authority
@@ -101,7 +101,9 @@ label_com_aeiou_bigbang_title=Title
 label_public_balance=Achievement\: {0} Golden Coint
 label_public_expectedSalary=The Salary Charged\: {0} Golden Coint.
 label_public_firesomeone=Unfollow
-label_public_hiresomeone=Add to My Space
+label_public_firesomeone_explain=After unfollowed, the contents of this user will be removed from your space, and not  allowed to read the content you set as \u2019Visible Only To My Friends \u2018 any more.
+label_public_hiresomeone=Add As Friend
+label_public_hiresomeone_explain=After adding as friend, contents of this user will be added into your space, and this user will be able to read the contents you added as 'Vaisible Only To My Friends'.
 label_public_index=Welcome to the space of {0}----{1}
 label_rememberme=Remember Me
 menu_category_bigtag_label=Big Tag
