--- a/src/main/webapp/WEB-INF/i18n/messages.properties
+++ b/src/main/webapp/WEB-INF/i18n/messages.properties
@@ -1,9 +1,9 @@
 #Created by JInto - www.guh-software.de
-#Sat Jun 22 12:54:19 EDT 2013
+#Fri Jun 28 11:56:10 EDT 2013
 \ =\u7A7A
 ALL_MY_TEAM_CAN_SEE=\u5728\u670B\u53CB\u5708\u5185\u53EF\u89C1
-AddOnName=STGO
-AddOnNotice=\u62D6\u52A8\u5FEB\u6377\u5DE5\u5177\u5230\u6536\u85CF\u680F\:
+AddOnName=\u6536\u85CF\u2022\u5206\u4EAB
+AddOnNotice=\u8BF7\u5C06\u8BE5[\u6536\u85CF\u2022\u5206\u4EAB]\u5FEB\u6377\u5DE5\u5177\u62D6\u5230\u6536\u85CF\u680F\u4E0A\uFF0C\u4EE5\u540E\u5F53\u60A8\u8BBF\u95EE\u7F51\u9875\u65F6\uFF0C\u53EA\u8981\u70B9\u51FB\u5B83\u5C31\u80FD\u65B9\u4FBF\u7684\u6536\u85CF\u5E76\u5171\u4EAB\u4E86.
 Big\ Tag=\u7C7B\u522B
 Circle=\u5708\u5B50
 Content=\u5185\u5BB9
