--- a/src/main/webapp/WEB-INF/i18n/messages_en.properties
+++ b/src/main/webapp/WEB-INF/i18n/messages_en.properties
@@ -1,9 +1,9 @@
 #Created by JInto - www.guh-software.de
-#Sat Jun 22 10:44:59 EDT 2013
+#Fri Jun 28 15:55:12 EDT 2013
 \ =EMPTY
 ALL_MY_TEAM_CAN_SEE=Visible Only To My Friends
-AddOnName=STGO
-AddOnNotice=Drag Quick Tool to Bookmarks Bar\:
+AddOnName=Save&Share\!
+AddOnNotice=Please drag this quick tool to bookmarks bar\! then when you want to save and share a page, you just click it\!
 Big\ Tag=Category
 Circle=Circle
 Content=Contents
@@ -30,7 +30,7 @@ allcontents=All Contents
 button_cancel=Cancel
 button_end=End
 button_find=Find
-button_gotohome=Go Visit {0}'s Space
+button_gotohome=Go visit the space of {0}
 button_home=Home
 button_myhome=Home Page of {0}
 button_proceed=Proceed
