--- a/src/main/webapp/WEB-INF/i18n/messages_fr.properties
+++ b/src/main/webapp/WEB-INF/i18n/messages_fr.properties
@@ -1,9 +1,9 @@
 #Created by JInto - www.guh-software.de
-#Sat Jun 22 10:44:59 EDT 2013
+#Fri Jun 28 15:55:12 EDT 2013
 \ =EMPTY
 ALL_MY_TEAM_CAN_SEE=visible to my friends
-AddOnName=STGO
-AddOnNotice=Drag the quick tool to bookmarks bar\:
+AddOnName=Save&Share\!
+AddOnNotice=Please drag this quick tool to bookmarks bar\! then when you want to save and share a page, you just click it\!
 Big\ Tag=Category
 Circle=Circle
 Content=Content
@@ -30,7 +30,7 @@ allcontents=All Contents
 button_cancel=Cancel
 button_end=End
 button_find=Find
-button_gotohome=go to {0}'s space
+button_gotohome=Go visit the space of {0}
 button_home=Home
 button_myhome=ma page d'accueil
 button_proceed=Proceed
