intergrated jersey client into project for coming synchronization function. fixed the bug that the right coloumn of blog display only public ones, (now when logged in user visiting his own space, he can see both public one and visible to friends one.

--- a/src/main/webapp/WEB-INF/i18n/messages_en.properties
+++ b/src/main/webapp/WEB-INF/i18n/messages_en.properties
@@ -1,8 +1,8 @@
 #Created by JInto - www.guh-software.de
-#Fri Jun 28 15:55:12 EDT 2013
+#Sat Jun 29 17:02:00 EDT 2013
 \ =EMPTY
 ALL_MY_TEAM_CAN_SEE=Visible Only To My Friends
-AddOnName=Save&Share\!
+AddOnName=Save&Share
 AddOnNotice=Please drag this quick tool to bookmarks bar\! then when you want to save and share a page, you just click it\!
 Big\ Tag=Category
 Circle=Circle
