added customizaion function of adding/remove tags to display. while, there's error, I found now there's case like the number string like ",8" don't know why yet

--- a/src/main/webapp/WEB-INF/i18n/application.properties
+++ b/src/main/webapp/WEB-INF/i18n/application.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Fri Jun 28 14:18:01 EDT 2013
+#Wed Jul 03 11:10:49 EDT 2013
 application_name=Bigbang
 label_com_aeiou_bigbang_domain_bigtag=Big Tag
 label_com_aeiou_bigbang_domain_bigtag_authority=\u8C01\u53EF\u4EE5\u770B\u89C1
@@ -42,6 +42,7 @@ label_com_aeiou_bigbang_domain_customize_cusvalue=Cus Value
 label_com_aeiou_bigbang_domain_customize_id=Id
 label_com_aeiou_bigbang_domain_customize_plural=Customizes
 label_com_aeiou_bigbang_domain_customize_version=Version
+label_com_aeiou_bigbang_domain_customizes_commonTag=\u516C\u5171\u7A7A\u95F4\u6807\u7B7E
 label_com_aeiou_bigbang_domain_message=\u7ED9{0}\u7559\u8A00
 label_com_aeiou_bigbang_domain_message_content=\u5185\u5BB9
 label_com_aeiou_bigbang_domain_message_id=Id
