--- a/src/main/webapp/WEB-INF/i18n/application_fr.properties
+++ b/src/main/webapp/WEB-INF/i18n/application_fr.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Fri Jun 28 14:15:14 EDT 2013
+#Wed Jul 03 11:10:49 EDT 2013
 application_name=Bigbang
 label_com_aeiou_bigbang_domain_bigtag=Big Tag
 label_com_aeiou_bigbang_domain_bigtag_authority=Authority
@@ -42,6 +42,7 @@ label_com_aeiou_bigbang_domain_customize_cusvalue=Cus Value
 label_com_aeiou_bigbang_domain_customize_id=Id
 label_com_aeiou_bigbang_domain_customize_plural=Customizes
 label_com_aeiou_bigbang_domain_customize_version=Version
+label_com_aeiou_bigbang_domain_customizes_commonTag=Main Category Tag
 label_com_aeiou_bigbang_domain_message=Leave message to {0}
 label_com_aeiou_bigbang_domain_message_content=Content
 label_com_aeiou_bigbang_domain_message_id=Id
