--- a/src/main/webapp/WEB-INF/i18n/application.properties
+++ b/src/main/webapp/WEB-INF/i18n/application.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Wed Jul 03 11:10:49 EDT 2013
+#Wed Jul 03 23:18:11 EDT 2013
 application_name=Bigbang
 label_com_aeiou_bigbang_domain_bigtag=Big Tag
 label_com_aeiou_bigbang_domain_bigtag_authority=\u8C01\u53EF\u4EE5\u770B\u89C1
@@ -65,14 +65,14 @@ label_com_aeiou_bigbang_domain_remark_remarkto=Remarkto
 label_com_aeiou_bigbang_domain_remark_remarttime=Remart Time
 label_com_aeiou_bigbang_domain_remark_replyto=Reply To
 label_com_aeiou_bigbang_domain_remark_version=Version
-label_com_aeiou_bigbang_domain_twitter=Twitter
+label_com_aeiou_bigbang_domain_twitter=\u7B14\u8BB0
 label_com_aeiou_bigbang_domain_twitter_addingtagflag=Adding Tag Flag
 label_com_aeiou_bigbang_domain_twitter_authority=\u8C01\u53EF\u4EE5\u770B\u89C1
 label_com_aeiou_bigbang_domain_twitter_id=Id
 label_com_aeiou_bigbang_domain_twitter_lastupdate=\u6700\u540E\u66F4\u65B0
 label_com_aeiou_bigbang_domain_twitter_plural=Twitters
-label_com_aeiou_bigbang_domain_twitter_publisher=Publisher
-label_com_aeiou_bigbang_domain_twitter_twitdate=\u6700\u540E\u4FEE\u6539\u65F6\u95F4
+label_com_aeiou_bigbang_domain_twitter_publisher=\u4F5C\u8005
+label_com_aeiou_bigbang_domain_twitter_twitdate=\u521B\u5EFA\u65F6\u95F4
 label_com_aeiou_bigbang_domain_twitter_twitent=\u5185\u5BB9
 label_com_aeiou_bigbang_domain_twitter_twittertag=\u7C7B\u522B
 label_com_aeiou_bigbang_domain_twitter_twtitle=\u6807\u9898
