fixed the bug that cause the creat of bookmark and twitter can not display. it was because I modifyed the Twitter into Chinese. in an other words, in all resource file, the value of variable 'label_com_aeiou_bigbang_domain_twitter' can only be the function modle name and should not be changed.

--- a/src/main/webapp/WEB-INF/i18n/application.properties
+++ b/src/main/webapp/WEB-INF/i18n/application.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Wed Jul 03 23:18:11 EDT 2013
+#Thu Jul 04 10:16:51 EDT 2013
 application_name=Bigbang
 label_com_aeiou_bigbang_domain_bigtag=Big Tag
 label_com_aeiou_bigbang_domain_bigtag_authority=\u8C01\u53EF\u4EE5\u770B\u89C1
@@ -65,7 +65,7 @@ label_com_aeiou_bigbang_domain_remark_remarkto=Remarkto
 label_com_aeiou_bigbang_domain_remark_remarttime=Remart Time
 label_com_aeiou_bigbang_domain_remark_replyto=Reply To
 label_com_aeiou_bigbang_domain_remark_version=Version
-label_com_aeiou_bigbang_domain_twitter=\u7B14\u8BB0
+label_com_aeiou_bigbang_domain_twitter=Twitter
 label_com_aeiou_bigbang_domain_twitter_addingtagflag=Adding Tag Flag
 label_com_aeiou_bigbang_domain_twitter_authority=\u8C01\u53EF\u4EE5\u770B\u89C1
 label_com_aeiou_bigbang_domain_twitter_id=Id
@@ -127,12 +127,12 @@ menu_item_customize_list_label=Customizes
 menu_item_customize_new_label=Customize
 menu_item_message_list_label=\u7559\u8A00
 menu_item_message_new_label=\u7559\u8A00
-menu_item_remark_list_label=Remarks
-menu_item_remark_new_label=Remark
-menu_item_twitter_list_label=Twitter
-menu_item_twitter_new_label=Twitter
-menu_item_useraccount_list_label=User Accounts
-menu_item_useraccount_new_label=User Account
+menu_item_remark_list_label=\u8BC4\u8BBA
+menu_item_remark_new_label=\u8BC4\u8BBA
+menu_item_twitter_list_label=\u7B14\u8BB0
+menu_item_twitter_new_label=\u7B14\u8BB0
+menu_item_useraccount_list_label=\u7528\u6237\u4FE1\u606F
+menu_item_useraccount_new_label=\u7528\u6237\u4FE1\u606F
 relayout_close=\u9690\u85CF
 relayout_list_size=\u663E\u793A\u5185\u5BB9\u6761\u6570\uFF1A
 relayout_move_down=\u5411\u4E0B\u79FB
