Added a theme witch function onto the footer, so user can swith to a theme they like. infuture, user will be able to define the theme in there useraccount.

--- a/src/main/webapp/WEB-INF/i18n/application.properties
+++ b/src/main/webapp/WEB-INF/i18n/application.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Thu Jul 04 10:16:51 EDT 2013
+#Thu Jul 04 10:52:58 EDT 2013
 application_name=Bigbang
 label_com_aeiou_bigbang_domain_bigtag=Big Tag
 label_com_aeiou_bigbang_domain_bigtag_authority=\u8C01\u53EF\u4EE5\u770B\u89C1
@@ -92,7 +92,7 @@ label_com_aeiou_bigbang_domain_useraccount_password=\u5BC6\u7801 *
 label_com_aeiou_bigbang_domain_useraccount_plural=User Accounts
 label_com_aeiou_bigbang_domain_useraccount_price=\u6708\u85AA
 label_com_aeiou_bigbang_domain_useraccount_status=\u72B6\u6001
-label_com_aeiou_bigbang_domain_useraccount_theme=Theme
+label_com_aeiou_bigbang_domain_useraccount_theme=\u4E3B\u9898
 label_com_aeiou_bigbang_domain_useraccount_version=Version
 label_com_aeiou_bigbang_personalspace=\u4E2A\u4EBA\u7A7A\u95F4
 label_com_aeiou_bigbang_privacyLevel=\u5B89\u5168\u7B49\u7EA7
