--- a/src/main/webapp/WEB-INF/i18n/messages_fr.properties
+++ b/src/main/webapp/WEB-INF/i18n/messages_fr.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Sat Jun 29 17:02:00 EDT 2013
+#Thu Jul 04 10:56:32 EDT 2013
 \ =EMPTY
 ALL_MY_TEAM_CAN_SEE=visible to my friends
 AddOnName=Save&Share
@@ -95,7 +95,7 @@ global_menu_readmore=>>>
 global_menu_resetView=Display all tags in a default order
 global_menu_tagsManage=Manage my tags
 global_sponsored=Sponsored by SpringSource
-global_theme=Theme
+global_theme=THEME
 global_theme_alt=alt
 global_theme_standard=standard
 list_first=First Page
