added reset to default function set the unread message notice to red color. when only friends have blog, also display.

--- a/src/main/webapp/WEB-INF/i18n/messages_en.properties
+++ b/src/main/webapp/WEB-INF/i18n/messages_en.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Thu Jul 04 10:56:32 EDT 2013
+#Fri Jul 05 10:26:12 EDT 2013
 \ =EMPTY
 ALL_MY_TEAM_CAN_SEE=Visible Only To My Friends
 AddOnName=Save&Share
@@ -92,7 +92,7 @@ global_menu_newbookmark=Found some thing good? Why not share with friends right 
 global_menu_newmessage=Message to owner? Good idea\! If you don't want others to see, please set as private.
 global_menu_newnote=Say a prayer? Write diary? Record an experience or thought? it's time to share them down.
 global_menu_readmore=>>>
-global_menu_resetView=Display Tags In Default Order
+global_menu_resetView=Reset To Default
 global_menu_tagsManage=Manage Tags
 global_sponsored=Sponsored by SpringSource
 global_theme=THEME
