--- a/src/main/webapp/WEB-INF/i18n/messages_fr.properties
+++ b/src/main/webapp/WEB-INF/i18n/messages_fr.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Thu Jul 04 10:56:32 EDT 2013
+#Fri Jul 05 10:26:12 EDT 2013
 \ =EMPTY
 ALL_MY_TEAM_CAN_SEE=visible to my friends
 AddOnName=Save&Share
@@ -92,7 +92,7 @@ global_menu_newbookmark=Found some thing good? Why not click and share with frie
 global_menu_newmessage=Leave a message to the owner? No problem\! While please set it as private if you don't want others to see this message.
 global_menu_newnote=make a pray? write diary? some experience or thought? it's time to write them down.
 global_menu_readmore=>>>
-global_menu_resetView=Display all tags in a default order
+global_menu_resetView=Reset To Default
 global_menu_tagsManage=Manage my tags
 global_sponsored=Sponsored by SpringSource
 global_theme=THEME
