--- a/src/main/webapp/WEB-INF/i18n/messages.properties
+++ b/src/main/webapp/WEB-INF/i18n/messages.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Fri Jun 28 11:56:10 EDT 2013
+#Fri Jul 05 10:26:12 EDT 2013
 \ =\u7A7A
 ALL_MY_TEAM_CAN_SEE=\u5728\u670B\u53CB\u5708\u5185\u53EF\u89C1
 AddOnName=\u6536\u85CF\u2022\u5206\u4EAB
@@ -92,7 +92,7 @@ global_menu_newbookmark=\u770B\u5230\u6709\u8DA3\u7684\u4E1C\u897F\u4E86\uFF1F\u
 global_menu_newmessage=\u7ED9\u7A7A\u95F4\u4E3B\u4EBA\u7559\u4E2A\u8A00\uFF1F\u6CA1\u95EE\u9898\uFF0C\u5982\u679C\u4E0D\u60F3\u8BA9\u522B\u4EBA\u770B\u5230\uFF0C\u8BF7\u8BB0\u5F97\u4FDD\u5B58\u524D\u8BBE\u7F6E\u6210\u201C\u4EC5\u5BF9\u7A7A\u95F4\u4E3B\u4EBA\u53EF\u89C1\u201D\u3002
 global_menu_newnote=\u60F3\u505A\u4E2A\u7948\u7977\uFF0C\u8BB0\u4E2A\u65E5\u5FD7\uFF0C\u8868\u8FBE\u60F3\u6CD5\uFF0C\u603B\u7ED3\u7ECF\u9A8C\uFF1F\u5199\u4E0B\u6765\uFF0C\u8BA9\u5BB6\u4EBA\u4E86\u89E3\uFF0C\u8BA9\u5C81\u6708\u89C1\u8BC1\uFF01
 global_menu_readmore=>>>
-global_menu_resetView=\u4EE5\u9ED8\u8BA4\u987A\u5E8F\u663E\u793A\u6240\u6709\u7684\u6807\u7B7E
+global_menu_resetView=\u6062\u590D\u5230\u9ED8\u8BA4\u8BBE\u7F6E
 global_menu_tagsManage=\u7BA1\u7406\u6211\u5B9A\u4E49\u7684\u5206\u7C7B
 global_sponsored=Sponsored by SpringSource
 global_theme=\u754C\u9762\u98CE\u683C
