partial commit of french resource change. and there's a bug of listing more of the blog on (only on) server, don't know if it's fixed in this version.

--- a/src/main/webapp/WEB-INF/i18n/messages_en.properties
+++ b/src/main/webapp/WEB-INF/i18n/messages_en.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Fri Jul 05 10:26:12 EDT 2013
+#Sun Jul 07 21:30:12 EDT 2013
 \ =EMPTY
 ALL_MY_TEAM_CAN_SEE=Visible Only To My Friends
 AddOnName=Save&Share
@@ -15,7 +15,6 @@ ONLY_FOR_SELECTED_PERSON=Visible Only To Selected User
 ONLY_MYSELF_CAN_SEE=Visible Only For Myself
 Remark=Remark
 SHOW_TO_EVERY_ONE=Visible For Everyone
-Twitter=Quick Thought
 User\ Account=User Account
 admin_suggested_tag1=Useful Websites
 admin_suggested_tag2=Good Recipes
@@ -126,7 +125,7 @@ security_signup_reason_4=4. you can listen to any one you interested by clicking
 security_signup_reason_5=5. if you don't want you share your bookmark or the content yet, you can set it as "visible to only my self".
 security_signup_reason_last=Let's go \:-)
 selenium_menu_test_suite=Test Suite
-webflow_endstate_message=End of Messages
+webflow_endstate_message=It's already the end.
 webflow_endstate_title=Spring Web Flow - End State
 webflow_menu_enter=Enter {0} flow
 webflow_state1_message=This is a simple example to get started with Spring Web Flow. The buttons below lead you to another view state (Proceed) or to an end state.
