--- a/src/main/webapp/WEB-INF/i18n/messages_fr.properties
+++ b/src/main/webapp/WEB-INF/i18n/messages_fr.properties
@@ -1,30 +1,29 @@
 #Created by JInto - www.guh-software.de
-#Fri Jul 05 10:26:12 EDT 2013
+#Mon Jul 08 00:19:23 EDT 2013
 \ =EMPTY
 ALL_MY_TEAM_CAN_SEE=visible to my friends
 AddOnName=Save&Share
-AddOnNotice=Please drag this quick tool to bookmarks bar\! then when you want to save and share a page, you just click it\!
-Big\ Tag=Category
+AddOnNotice=-
+Big\ Tag=Cat\u00E9grie
 Circle=Circle
 Content=Content
-Customize=Customize
+Customize=-
 NotesAndPrays=Notes and Prays de {0}
 NotesAndPraysOfFriend=Notes and Prays de sami et ...
 ONLY_FOR_RECEIVER=visible to only the receiver
 ONLY_FOR_SELECTED_PERSON=visible to selected person
 ONLY_MYSELF_CAN_SEE=visible for myself
-Remark=Remark
+Remark=Commentaires
 SHOW_TO_EVERY_ONE=visible to everyone.
-Twitter=Twitter
 User\ Account=User Account
 admin_suggested_tag1=Useful Websites
-admin_suggested_tag2=Good Recipes
-admin_suggested_tag3=Photos for Show
+admin_suggested_tag2=Bonnes Recettes
+admin_suggested_tag3=Photos
 admin_suggested_tag4=Info for Project Team
 admin_suggested_tag5=Pray
 admin_suggested_tag6=Diary
 admin_suggested_tag7=Think
-admin_suggested_tag8=Experience
+admin_suggested_tag8=Exp\u00E9rience
 agree=I Agree, Start Signup\!
 allcontents=All Contents
 button_cancel=Cancel
@@ -43,7 +42,7 @@ button_signup=Sign Up
 button_submit=Submit
 button_update=Update
 contributeContent=I just got something\!
-contributeTwitter=I'm gonna write somthing\!
+contributeTwitter=Ecrivez quelque chose
 default_welcome_message=Welcome\uFF0Cshould you have any question, please go to Tao's space and leave message.
 doublespace=\  
 entity_create=Create new {0}
@@ -61,7 +60,7 @@ entity_update=Update {0}
 error_dataaccessfailure_problemdescription=Sorry, a problem occurred while accessing the database.
 error_dataaccessfailure_title=Data access failure
 error_resourcenotfound_problemdescription=Sorry, we did not find the resource you were looking for.
-error_resourcenotfound_title=Requested Resource Not Found
+error_resourcenotfound_title=-
 error_uncaughtexception_problemdescription=Sorry, we encountered an internal error.
 error_uncaughtexception_title=Internal Error
 exception_cookie=Cookies
@@ -75,25 +74,25 @@ field_invalid_number=Number with \\'-\\' or \\'.\\' allowed
 field_required=required
 field_simple_validation=Enter {0} {1}
 global_generic={0}
-global_language=Language
+global_language=Langue
 global_language_chinese=\u4E2D\u6587\u793E\u533A
 global_language_english=English Community
 global_language_french=Communaut\u00E9 fran\u00E7aise
 global_language_switch=Switch language to {0}
-global_login_notice=Please click here to log in and add comments\!  
-global_menu_accountsManage=Manage my account
-global_menu_contentsManage=Manage my contents
-global_menu_diaryManage=Mange my notes
+global_login_notice=Cliquez ici pour vous connecter et ajouter des commentaires\!
+global_menu_accountsManage=Cr\u00E9er mon compte
+global_menu_contentsManage=Cr\u00E9er mes ``marques pages``
+global_menu_diaryManage=Cr\u00E9er mes notes
 global_menu_find=Find by {0}
 global_menu_inboxManage=Check My Messages
 global_menu_list=List all {0}
 global_menu_new=Create new {0}
 global_menu_newbookmark=Found some thing good? Why not click and share with friends right away\!
-global_menu_newmessage=Leave a message to the owner? No problem\! While please set it as private if you don't want others to see this message.
+global_menu_newmessage=-
 global_menu_newnote=make a pray? write diary? some experience or thought? it's time to write them down.
 global_menu_readmore=>>>
 global_menu_resetView=Reset To Default
-global_menu_tagsManage=Manage my tags
+global_menu_tagsManage=Cr\u00E9er mes cat\u00E9gries
 global_sponsored=Sponsored by SpringSource
 global_theme=THEME
 global_theme_alt=alt
@@ -105,13 +104,13 @@ list_page=Page {0} of {1}
 list_previous=Previous Page
 list_size=List results per page\:
 public=public
-publicDescription=Present Filtered News For Special Person, Manage Persional Bookmarks On Cloud, Share Useful Stuff with Team and Friends, And More... 
-security_create_unsuccessful=Sorry, this user name is already regestered, please try an other one.
+publicDescription=Lire, Partager et ... Communaut\u00E9 en ligne pour trouver les "Good Ones" \!
+security_create_unsuccessful=D\u00E9sol\u00E9, ce nom est d\u00E9ja utilis\u00E9, veuillez en trouver un autre. 
 security_login=Identifiez-Vous
 security_login_form_name=Nom
-security_login_form_name_message=Enter your name
+security_login_form_name_message=Entrez votre nom
 security_login_form_password=Password
-security_login_form_password_message=Enter your password (no less then 4 characters please)
+security_login_form_password_message=Entrez votre mot de passe (4 lettres minimum)
 security_login_message=Have no account yet?  Click the 'I agree' in right side and Sign up right now\! it takes only 10 seconds.
 security_login_title=Registered User Login Here
 security_login_unsuccessful=Your login attempt was not successful, try again. Reason\: 
@@ -126,7 +125,7 @@ security_signup_reason_4=4. you can listen to any one you interested by clicking
 security_signup_reason_5=5. if you don't want you share your bookmark or the content yet, you can set it as "visible to only my self".
 security_signup_reason_last=Let's go \:-)
 selenium_menu_test_suite=Test Suite
-webflow_endstate_message=You have now reached the end of this flow.
+webflow_endstate_message=-
 webflow_endstate_title=Spring Web Flow - End State
 webflow_menu_enter=Enter {0} flow
 webflow_state1_message=This is a simple example to get started with Spring Web Flow. The buttons below lead you to another view state (Proceed) or to an end state.
