french reosurse file partial commit.

--- a/src/main/webapp/WEB-INF/i18n/messages_fr.properties
+++ b/src/main/webapp/WEB-INF/i18n/messages_fr.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Mon Jul 08 00:19:23 EDT 2013
+#Mon Jul 08 14:55:30 EDT 2013
 \ =EMPTY
 ALL_MY_TEAM_CAN_SEE=visible to my friends
 AddOnName=Save&Share
@@ -15,6 +15,7 @@ ONLY_FOR_SELECTED_PERSON=visible to selected person
 ONLY_MYSELF_CAN_SEE=visible for myself
 Remark=Commentaires
 SHOW_TO_EVERY_ONE=visible to everyone.
+Twitter=-Quick Thought
 User\ Account=User Account
 admin_suggested_tag1=Useful Websites
 admin_suggested_tag2=Bonnes Recettes
